# friction-modeling-symreg2026

./: .gitignore  AGENTS.md  LICENSE  README.md  initial_prompt.txt  pyproject.toml
code/: mu_func.py  mu_func.py.backup  tire_model_core.py  tire_model_experiment.py  tire_model_loss.py  tire_model_report.py
